# wildberries_parser

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  config.json  docker-compose.yml  main.py  pyproject.toml
core/: data_loader.py  exporter.py  json_loader.py  logger.py  settings.py
enums/: country.py
models/: filter.py  main_config.py  product_model.py  request.py  seller.py  wool_coat.py
services/: basket_id.py  parser.py  url_product_generate.py
tests/: conftest.py  test_parser.py
utils/: basket_id.py  build_product.py  data_save_service.py  price.py  report.py
