[project]
name = "wildberries-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Rashid",email = "valentaine1234@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "autoflake (>=2.3.3,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
